lab4/src/y.output
State 191 conflicts: 1 shift/reduce


Grammar

    0 $accept: Root $end

    1 Root: CompUnit

    2 CompUnit: ConstDecl
    3         | VarDecl
    4         | FuncDef
    5         | ConstDecl CompUnit
    6         | VarDecl CompUnit
    7         | FuncDef CompUnit

    8 ConstDecl: CONST INT ConstDef SEMICOLON
    9          | CONST FLOAT ConstDef SEMICOLON

   10 ConstDef: ID ConstExpArray ASSIGN ConstInitVal
   11         | ID ConstExpArray ASSIGN ConstInitVal COMMA ConstDef

   12 ConstExpArray: ε
   13              | LB ConstExp RB ConstExpArray

   14 ConstInitVal: ConstExp
   15             | LC RC
   16             | LC ConstInitVal RC
   17             | LC ConstInitVal COMMA ConstInitVal RC

   18 ConstExp: MulExp
   19         | MulExp PLUS Exp
   20         | MulExp MINUS Exp

   21 VarDecl: INT VarDef SEMICOLON
   22        | FLOAT VarDef SEMICOLON

   23 VarDef: ID ConstExpArray
   24       | ID ConstExpArray ASSIGN InitVal
   25       | ID ConstExpArray COMMA VarDef
   26       | ID ConstExpArray ASSIGN InitVal COMMA VarDef

   27 InitVal: Exp
   28        | LC RC
   29        | LC InitVals RC

   30 InitVals: InitVal
   31         | InitVal COMMA InitVals

   32 FuncDef: INT ID LP RP Block
   33        | FLOAT ID LP RP Block
   34        | VOID ID LP RP Block
   35        | INT ID LP FuncFParam RP Block
   36        | FLOAT ID LP FuncFParam RP Block
   37        | VOID ID LP FuncFParam RP Block

   38 FuncFParam: INT ID
   39           | FLOAT ID
   40           | INT ID LB RB ExpArray
   41           | FLOAT ID LB RB ExpArray
   42           | INT ID COMMA FuncFParam
   43           | FLOAT ID COMMA FuncFParam
   44           | INT ID LB RB ExpArray COMMA FuncFParam
   45           | FLOAT ID LB RB ExpArray COMMA FuncFParam

   46 Block: LC BlockItem RC

   47 BlockItem: ε
   48          | ConstDecl BlockItem
   49          | VarDecl BlockItem
   50          | Stmt BlockItem

   51 Stmt: LVal ASSIGN Exp SEMICOLON
   52     | Exp SEMICOLON
   53     | Block
   54     | IF LP Cond RP Stmt
   55     | IF LP Cond RP Stmt ELSE Stmt
   56     | WHILE LP Cond RP Stmt
   57     | BREAK SEMICOLON
   58     | CONTINUE SEMICOLON
   59     | RETURN SEMICOLON
   60     | RETURN Exp SEMICOLON

   61 Exp: AddExp

   62 AddExp: MulExp
   63       | MulExp PLUS AddExp
   64       | MulExp MINUS AddExp

   65 MulExp: UnaryExp
   66       | UnaryExp MUL MulExp
   67       | UnaryExp DIV MulExp
   68       | UnaryExp MOD MulExp

   69 UnaryExp: PrimaryExp
   70         | ID LP RP
   71         | ID LP FuncRParams RP
   72         | PLUS UnaryExp
   73         | MINUS UnaryExp
   74         | NOT UnaryExp

   75 FuncRParams: Exp
   76            | Exp COMMA FuncRParams

   77 PrimaryExp: LP Exp RP
   78           | LVal
   79           | INT_LIT
   80           | FLOAT_LIT

   81 LVal: ID ExpArray

   82 Cond: LOrExp

   83 LOrExp: LAndExp
   84       | LAndExp OR LOrExp

   85 LAndExp: EqExp
   86        | EqExp AND LAndExp

   87 EqExp: RelExp
   88      | RelExp EQ EqExp
   89      | RelExp NE EqExp

   90 RelExp: AddExp
   91       | AddExp LT RelExp
   92       | AddExp GT RelExp
   93       | AddExp LE RelExp
   94       | AddExp GE RelExp

   95 ExpArray: ε
   96         | LB Exp RB ExpArray


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <str_val> (258) 10 11 23 24 25 26 32 33 34 35 36 37 38 39 40 41 42 43 44 45 70 71 81
    INT_LIT <int_val> (259) 79
    FLOAT_LIT <float_val> (260) 80
    INT <int_val> (261) 8 21 32 35 38 40 42 44
    FLOAT <int_val> (262) 9 22 33 36 39 41 43 45
    VOID <int_val> (263) 34 37
    CONST <int_val> (264) 8 9
    RETURN <int_val> (265) 59 60
    IF <int_val> (266) 54 55
    ELSE <int_val> (267) 55
    WHILE <int_val> (268) 56
    BREAK <int_val> (269) 57
    CONTINUE <int_val> (270) 58
    LP <int_val> (271) 32 33 34 35 36 37 54 55 56 70 71 77
    RP <int_val> (272) 32 33 34 35 36 37 54 55 56 70 71 77
    LB <int_val> (273) 13 40 41 44 45 96
    RB <int_val> (274) 13 40 41 44 45 96
    LC <int_val> (275) 15 16 17 28 29 46
    RC <int_val> (276) 15 16 17 28 29 46
    COMMA <int_val> (277) 11 17 25 26 31 42 43 44 45 76
    SEMICOLON <int_val> (278) 8 9 21 22 51 52 57 58 59 60
    MINUS <int_val> (279) 20 64 73
    NOT <int_val> (280) 74
    ASSIGN <int_val> (281) 10 11 24 26 51
    PLUS <int_val> (282) 19 63 72
    MUL <int_val> (283) 66
    DIV <int_val> (284) 67
    MOD <int_val> (285) 68
    AND <int_val> (286) 86
    OR <int_val> (287) 84
    EQ <int_val> (288) 88
    NE <int_val> (289) 89
    LT <int_val> (290) 91
    LE <int_val> (291) 93
    GT <int_val> (292) 92
    GE <int_val> (293) 94


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    Root (40)
        on left: 1
        on right: 0
    CompUnit (41)
        on left: 2 3 4 5 6 7
        on right: 1 5 6 7
    ConstDecl (42)
        on left: 8 9
        on right: 2 5 48
    ConstDef (43)
        on left: 10 11
        on right: 8 9 11
    ConstExpArray (44)
        on left: 12 13
        on right: 10 11 13 23 24 25 26
    ConstInitVal (45)
        on left: 14 15 16 17
        on right: 10 11 16 17
    ConstExp (46)
        on left: 18 19 20
        on right: 13 14
    VarDecl (47)
        on left: 21 22
        on right: 3 6 49
    VarDef (48)
        on left: 23 24 25 26
        on right: 21 22 25 26
    InitVal (49)
        on left: 27 28 29
        on right: 24 26 30 31
    InitVals (50)
        on left: 30 31
        on right: 29 31
    FuncDef (51)
        on left: 32 33 34 35 36 37
        on right: 4 7
    FuncFParam (52)
        on left: 38 39 40 41 42 43 44 45
        on right: 35 36 37 42 43 44 45
    Block (53)
        on left: 46
        on right: 32 33 34 35 36 37 53
    BlockItem (54)
        on left: 47 48 49 50
        on right: 46 48 49 50
    Stmt (55)
        on left: 51 52 53 54 55 56 57 58 59 60
        on right: 50 54 55 56
    Exp (56)
        on left: 61
        on right: 19 20 27 51 52 60 75 76 77 96
    AddExp (57)
        on left: 62 63 64
        on right: 61 63 64 90 91 92 93 94
    MulExp (58)
        on left: 65 66 67 68
        on right: 18 19 20 62 63 64 66 67 68
    UnaryExp (59)
        on left: 69 70 71 72 73 74
        on right: 65 66 67 68 72 73 74
    FuncRParams (60)
        on left: 75 76
        on right: 71 76
    PrimaryExp (61)
        on left: 77 78 79 80
        on right: 69
    LVal (62)
        on left: 81
        on right: 51 78
    Cond (63)
        on left: 82
        on right: 54 55 56
    LOrExp (64)
        on left: 83 84
        on right: 82 84
    LAndExp (65)
        on left: 85 86
        on right: 83 84 86
    EqExp (66)
        on left: 87 88 89
        on right: 85 86 88 89
    RelExp (67)
        on left: 90 91 92 93 94
        on right: 87 88 89 91 92 93 94
    ExpArray (68)
        on left: 95 96
        on right: 40 41 44 45 81 96


State 0

    0 $accept: • Root $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3
    CONST  shift, and go to state 4

    Root       go to state 5
    CompUnit   go to state 6
    ConstDecl  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 9


State 1

   21 VarDecl: INT • VarDef SEMICOLON
   32 FuncDef: INT • ID LP RP Block
   35        | INT • ID LP FuncFParam RP Block

    ID  shift, and go to state 10

    VarDef  go to state 11


State 2

   22 VarDecl: FLOAT • VarDef SEMICOLON
   33 FuncDef: FLOAT • ID LP RP Block
   36        | FLOAT • ID LP FuncFParam RP Block

    ID  shift, and go to state 12

    VarDef  go to state 13


State 3

   34 FuncDef: VOID • ID LP RP Block
   37        | VOID • ID LP FuncFParam RP Block

    ID  shift, and go to state 14


State 4

    8 ConstDecl: CONST • INT ConstDef SEMICOLON
    9          | CONST • FLOAT ConstDef SEMICOLON

    INT    shift, and go to state 15
    FLOAT  shift, and go to state 16


State 5

    0 $accept: Root • $end

    $end  shift, and go to state 17


State 6

    1 Root: CompUnit •

    $default  reduce using rule 1 (Root)


State 7

    2 CompUnit: ConstDecl •
    5         | ConstDecl • CompUnit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3
    CONST  shift, and go to state 4

    $default  reduce using rule 2 (CompUnit)

    CompUnit   go to state 18
    ConstDecl  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 9


State 8

    3 CompUnit: VarDecl •
    6         | VarDecl • CompUnit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3
    CONST  shift, and go to state 4

    $default  reduce using rule 3 (CompUnit)

    CompUnit   go to state 19
    ConstDecl  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 9


State 9

    4 CompUnit: FuncDef •
    7         | FuncDef • CompUnit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3
    CONST  shift, and go to state 4

    $default  reduce using rule 4 (CompUnit)

    CompUnit   go to state 20
    ConstDecl  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 9


State 10

   23 VarDef: ID • ConstExpArray
   24       | ID • ConstExpArray ASSIGN InitVal
   25       | ID • ConstExpArray COMMA VarDef
   26       | ID • ConstExpArray ASSIGN InitVal COMMA VarDef
   32 FuncDef: INT ID • LP RP Block
   35        | INT ID • LP FuncFParam RP Block

    LP  shift, and go to state 21
    LB  shift, and go to state 22

    $default  reduce using rule 12 (ConstExpArray)

    ConstExpArray  go to state 23


State 11

   21 VarDecl: INT VarDef • SEMICOLON

    SEMICOLON  shift, and go to state 24


State 12

   23 VarDef: ID • ConstExpArray
   24       | ID • ConstExpArray ASSIGN InitVal
   25       | ID • ConstExpArray COMMA VarDef
   26       | ID • ConstExpArray ASSIGN InitVal COMMA VarDef
   33 FuncDef: FLOAT ID • LP RP Block
   36        | FLOAT ID • LP FuncFParam RP Block

    LP  shift, and go to state 25
    LB  shift, and go to state 22

    $default  reduce using rule 12 (ConstExpArray)

    ConstExpArray  go to state 23


State 13

   22 VarDecl: FLOAT VarDef • SEMICOLON

    SEMICOLON  shift, and go to state 26


State 14

   34 FuncDef: VOID ID • LP RP Block
   37        | VOID ID • LP FuncFParam RP Block

    LP  shift, and go to state 27


State 15

    8 ConstDecl: CONST INT • ConstDef SEMICOLON

    ID  shift, and go to state 28

    ConstDef  go to state 29


State 16

    9 ConstDecl: CONST FLOAT • ConstDef SEMICOLON

    ID  shift, and go to state 28

    ConstDef  go to state 30


State 17

    0 $accept: Root $end •

    $default  accept


State 18

    5 CompUnit: ConstDecl CompUnit •

    $default  reduce using rule 5 (CompUnit)


State 19

    6 CompUnit: VarDecl CompUnit •

    $default  reduce using rule 6 (CompUnit)


State 20

    7 CompUnit: FuncDef CompUnit •

    $default  reduce using rule 7 (CompUnit)


State 21

   32 FuncDef: INT ID LP • RP Block
   35        | INT ID LP • FuncFParam RP Block

    INT    shift, and go to state 31
    FLOAT  shift, and go to state 32
    RP     shift, and go to state 33

    FuncFParam  go to state 34


State 22

   13 ConstExpArray: LB • ConstExp RB ConstExpArray

    ID         shift, and go to state 35
    INT_LIT    shift, and go to state 36
    FLOAT_LIT  shift, and go to state 37
    LP         shift, and go to state 38
    MINUS      shift, and go to state 39
    NOT        shift, and go to state 40
    PLUS       shift, and go to state 41

    ConstExp    go to state 42
    MulExp      go to state 43
    UnaryExp    go to state 44
    PrimaryExp  go to state 45
    LVal        go to state 46


State 23

   23 VarDef: ID ConstExpArray •
   24       | ID ConstExpArray • ASSIGN InitVal
   25       | ID ConstExpArray • COMMA VarDef
   26       | ID ConstExpArray • ASSIGN InitVal COMMA VarDef

    COMMA   shift, and go to state 47
    ASSIGN  shift, and go to state 48

    $default  reduce using rule 23 (VarDef)


State 24

   21 VarDecl: INT VarDef SEMICOLON •

    $default  reduce using rule 21 (VarDecl)


State 25

   33 FuncDef: FLOAT ID LP • RP Block
   36        | FLOAT ID LP • FuncFParam RP Block

    INT    shift, and go to state 31
    FLOAT  shift, and go to state 32
    RP     shift, and go to state 49

    FuncFParam  go to state 50


State 26

   22 VarDecl: FLOAT VarDef SEMICOLON •

    $default  reduce using rule 22 (VarDecl)


State 27

   34 FuncDef: VOID ID LP • RP Block
   37        | VOID ID LP • FuncFParam RP Block

    INT    shift, and go to state 31
    FLOAT  shift, and go to state 32
    RP     shift, and go to state 51

    FuncFParam  go to state 52


State 28

   10 ConstDef: ID • ConstExpArray ASSIGN ConstInitVal
   11         | ID • ConstExpArray ASSIGN ConstInitVal COMMA ConstDef

    LB  shift, and go to state 22

    $default  reduce using rule 12 (ConstExpArray)

    ConstExpArray  go to state 53


State 29

    8 ConstDecl: CONST INT ConstDef • SEMICOLON

    SEMICOLON  shift, and go to state 54


State 30

    9 ConstDecl: CONST FLOAT ConstDef • SEMICOLON

    SEMICOLON  shift, and go to state 55


State 31

   38 FuncFParam: INT • ID
   40           | INT • ID LB RB ExpArray
   42           | INT • ID COMMA FuncFParam
   44           | INT • ID LB RB ExpArray COMMA FuncFParam

    ID  shift, and go to state 56


State 32

   39 FuncFParam: FLOAT • ID
   41           | FLOAT • ID LB RB ExpArray
   43           | FLOAT • ID COMMA FuncFParam
   45           | FLOAT • ID LB RB ExpArray COMMA FuncFParam

    ID  shift, and go to state 57


State 33

   32 FuncDef: INT ID LP RP • Block

    LC  shift, and go to state 58

    Block  go to state 59


State 34

   35 FuncDef: INT ID LP FuncFParam • RP Block

    RP  shift, and go to state 60


State 35

   70 UnaryExp: ID • LP RP
   71         | ID • LP FuncRParams RP
   81 LVal: ID • ExpArray

    LP  shift, and go to state 61
    LB  shift, and go to state 62

    $default  reduce using rule 95 (ExpArray)

    ExpArray  go to state 63


State 36

   79 PrimaryExp: INT_LIT •

    $default  reduce using rule 79 (PrimaryExp)


State 37

   80 PrimaryExp: FLOAT_LIT •

    $default  reduce using rule 80 (PrimaryExp)


State 38

   77 PrimaryExp: LP • Exp RP

    ID         shift, and go to state 35
    INT_LIT    shift, and go to state 36
    FLOAT_LIT  shift, and go to state 37
    LP         shift, and go to state 38
    MINUS      shift, and go to state 39
    NOT        shift, and go to state 40
    PLUS       shift, and go to state 41

    Exp         go to state 64
    AddExp      go to state 65
    MulExp      go to state 66
    UnaryExp    go to state 44
    PrimaryExp  go to state 45
    LVal        go to state 46


State 39

   73 UnaryExp: MINUS • UnaryExp

    ID         shift, and go to state 35
    INT_LIT    shift, and go to state 36
    FLOAT_LIT  shift, and go to state 37
    LP         shift, and go to state 38
    MINUS      shift, and go to state 39
    NOT        shift, and go to state 40
    PLUS       shift, and go to state 41

    UnaryExp    go to state 67
    PrimaryExp  go to state 45
    LVal        go to state 46


State 40

   74 UnaryExp: NOT • UnaryExp

    ID         shift, and go to state 35
    INT_LIT    shift, and go to state 36
    FLOAT_LIT  shift, and go to state 37
    LP         shift, and go to state 38
    MINUS      shift, and go to state 39
    NOT        shift, and go to state 40
    PLUS       shift, and go to state 41

    UnaryExp    go to state 68
    PrimaryExp  go to state 45
    LVal        go to state 46


State 41

   72 UnaryExp: PLUS • UnaryExp

    ID         shift, and go to state 35
    INT_LIT    shift, and go to state 36
    FLOAT_LIT  shift, and go to state 37
    LP         shift, and go to state 38
    MINUS      shift, and go to state 39
    NOT        shift, and go to state 40
    PLUS       shift, and go to state 41

    UnaryExp    go to state 69
    PrimaryExp  go to state 45
    LVal        go to state 46


State 42

   13 ConstExpArray: LB ConstExp • RB ConstExpArray

    RB  shift, and go to state 70


State 43

   18 ConstExp: MulExp •
   19         | MulExp • PLUS Exp
   20         | MulExp • MINUS Exp

    MINUS  shift, and go to state 71
    PLUS   shift, and go to state 72

    $default  reduce using rule 18 (ConstExp)


State 44

   65 MulExp: UnaryExp •
   66       | UnaryExp • MUL MulExp
   67       | UnaryExp • DIV MulExp
   68       | UnaryExp • MOD MulExp

    MUL  shift, and go to state 73
    DIV  shift, and go to state 74
    MOD  shift, and go to state 75

    $default  reduce using rule 65 (MulExp)


State 45

   69 UnaryExp: PrimaryExp •

    $default  reduce using rule 69 (UnaryExp)


State 46

   78 PrimaryExp: LVal •

    $default  reduce using rule 78 (PrimaryExp)


State 47

   25 VarDef: ID ConstExpArray COMMA • VarDef

    ID  shift, and go to state 76

    VarDef  go to state 77


State 48

   24 VarDef: ID ConstExpArray ASSIGN • InitVal
   26       | ID ConstExpArray ASSIGN • InitVal COMMA VarDef
